<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ViewFlowExample!</string>
    <string name="app_name">reportn</string>
    <string name="title_title">TitleFlowIndicator</string>
    <string name="circle_title">CircleFlowIndicator</string>
    <string name="diff_title">DifferentViewFlow</string>
    <string name="async_title">AsyncDataLoading</string>
    <string name="test_build">"TEST BUILD! 
DO NOT DISTRIBUTE!"</string>
 <string name="new_note">New note</string>
<string name="snapshot">Snapshot</string>
<string name="cn_audio">Audio</string>
<string name="attach">Attach</string>
 <string name="blank_username">Username cannot be blank.</string>
 <string name="feature_discovery_title">Explore %s</string>
  <string name="search">Search</string>
  <string name="username">Username</string>
   <string name="async_title">AsyncDataLoading</string>
    <string name="btn_add_photo">Add a photo</string>
    <string name="empty_report_title">Enter a title for the report.</string>
    <string name="empty_report_description">Enter a description for the report.</string>
    <string name="empty_report_location">The location name field is .</string>
    <string name="empty_report_categories">Select at least one category.</string>
    <string name="hint_location">Enter location</string>
    <string name="enter_description">Enter Description</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="select_category">Select Category</string>
    <string name="date_and_time">Date and Time</string>
     <string name="change_date">Change date</string>
     <string name="change_time">Change time</string>
     <string name="location">Location</string>
     <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="photos">Photos</string>
     <string name="title_activity_fix_psition">FixPosition</string>
    <string name="add_photo">Add Photo</string>
     <string name="news">News</string>
     <string name="enter_news_url">Enter news URL</string>
     <string name="delete">Delete</string>
</resources>
