<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (c) 2010 Ushahidi Inc All rights reserved Contact: team@ushahidi.com 
    Website: http://www.ushahidi.com GNU Lesser General Public License Usage 
    This file may be used under the terms of the GNU Lesser General Public License 
    version 3 as published by the Free Software Foundation and appearing in the 
    file LICENSE.LGPL included in the packaging of this file. Please review the 
    following information to ensure the GNU Lesser General Public License version 
    3 requirements will be met: http://www.gnu.org/licenses/lgpl.html. If you 
    have questions regarding the use of this file, please contact Ushahidi developers 
    at team@ushahidi.com.
-->
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris" xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Parent layout starts -->

    <LinearLayout
        style="@style/LinearLayout.Vertical.Full"
        android:background="@color/background_color"
        android:padding="10dip" >

        <!-- Title layout begins -->

        <LinearLayout
            style="@style/LinearLayout.Vertical.Wrap"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/lbl_title"
                style="@style/TextView.Label"
                android:text="@string/title_title"
                android:textColor="@color/rose" />

            <EditText
                android:id="@+id/incident_title"
                style="@style/EditText.Title"
                android:hint="@string/empty_report_title" />
        </LinearLayout>
        <!-- Title layout ends. -->


        <!-- Description layout starts -->

        <LinearLayout
            style="@style/LinearLayout.Vertical"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/lbl_incidents_dec"
                style="@style/TextView.Label"
                android:text="@string/description"
                android:textColor="@color/rose" />

            <EditText
                android:id="@+id/incident_desc"
                style="@style/EditText.Multiline"
                android:hint="@string/empty_report_description" />
        </LinearLayout>
        <!-- Description layout ends. -->


        <!-- Categories layout starts -->

        <LinearLayout
            style="@style/LinearLayout.Vertical"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/lbl_date"
                style="@style/TextView.Label"
                android:text="@string/category"
                android:textColor="@color/rose" />

            <Button
                android:id="@+id/add_category"
                style="@style/Button.Select"
                android:background="@drawable/btn_select_anim"
                android:text="@string/select_category"
                android:textColor="@color/vert_fonce" />

        </LinearLayout>
        <!-- Categories layout ends. -->


        <!-- Date layout starts. -->

        <LinearLayout
            style="@style/LinearLayout.Vertical"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/lbl_date_time"
                style="@style/TextView.Label"
                android:text="@string/date_and_time"
                android:textColor="@color/rose" />

            <LinearLayout style="@style/LinearLayout.Horizontal" >

                <Button
                    android:id="@+id/pick_date"
                    style="@style/Button.Select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_date"
                    android:background="@drawable/btn_select_anim"
                    android:textColor="@color/vert_fonce" />
                
                <Button
                    android:id="@+id/pick_time"
                    style="@style/Button.Select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_time"
                    android:background="@drawable/btn_select_anim"
                    android:textColor="@color/vert_fonce" />

            </LinearLayout>
             
        </LinearLayout>
        <!-- Date layout ends. -->


        <!-- Location layout starts. -->

        <LinearLayout
            style="@style/LinearLayout.Vertical"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/incident_loc"
                style="@style/TextView.Label"
                android:text="@string/location"
                android:textColor="@color/rose" />

            <!-- location name -->

            <EditText
                android:id="@+id/incident_location"
                style="@style/EditText.CapWords"
                android:hint="@string/hint_location"
                android:paddingBottom="2dip" />

            <WebView
				xmlns:android="http://schemas.android.com/apk/res/android"
			    android:id="@+id/webView1"
			    android:layout_below="@+id/barre"
			    android:layout_width="fill_parent"
			    android:layout_height="120dp"
				/>

            <LinearLayout
                style="@style/LinearLayout.Horizontal"
                android:paddingTop="5dp" >

                <EditText
                    android:id="@+id/incident_latitude"
                    style="@style/EditText.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/latitude"
                    android:inputType="numberDecimal|numberSigned" />

                <EditText
                    android:id="@+id/incident_longitude"
                    style="@style/EditText.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/longitude"
                    android:inputType="numberDecimal|numberSigned" />
            </LinearLayout>
        </LinearLayout>
        <!-- Location layout ends. -->


        <!-- Photo layout starts. -->

        <LinearLayout
            style="@style/LinearLayout.Vertical"
            android:paddingBottom="5dp" >

            <TextView
                style="@style/TextView.Label"
                android:text="@string/photos"
                android:textColor="@color/rose" />

            <Button
                android:id="@+id/btnPicture"
                style="@style/Button.Select"
                android:text="@string/add_photo"
                android:background="@drawable/btn_select_anim"
                android:textColor="@color/vert_fonce" />

            <LinearLayout
                style="@style/LinearLayout.Horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <Gallery
                    android:id="@+id/gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:longClickable="true"
                    android:spacing="10dp" />
            </LinearLayout>

            <LinearLayout style="@style/LinearLayout.Horizontal" >

                <ImageSwitcher
                    android:id="@+id/sel_image_switcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <!-- Photo layout ends. -->


        <!-- News layout starts. -->

        <LinearLayout
            style="@style/LinearLayout.Vertical"
            android:paddingBottom="10dp" >

           <ImageView
		    android:id="@+id/pictosend"
		    android:layout_width="fill_parent"
		    android:layout_height="196dp" />
        </LinearLayout>
        <!-- News layout ends. -->


        <!-- Delete layout starts. -->


        <LinearLayout
            style="@style/LinearLayout.Horizontal"
            android:orientation="vertical" >

             <Button
                 android:id="@+id/send"
                 style="@style/Button.Select"
                 android:text="Envoie"
                 android:background="@drawable/btn_select_anim"
                 android:textColor="@color/vert_fonce" />

        </LinearLayout>


    </LinearLayout>
    <!-- Parent layout ends. -->

</ScrollView>