<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (c) 2010 Ushahidi Inc All rights reserved Contact: team@ushahidi.com 
    Website: http://www.ushahidi.com GNU Lesser General Public License Usage 
    This file may be used under the terms of the GNU Lesser General Public License 
    version 3 as published by the Free Software Foundation and appearing in the 
    file LICENSE.LGPL included in the packaging of this file. Please review the 
    following information to ensure the GNU Lesser General Public License version 
    3 requirements will be met: http://www.gnu.org/licenses/lgpl.html. If you 
    have questions regarding the use of this file, please contact Ushahidi developers 
    at team@ushahidi.com.
-->
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris" 
    android:clickable="false"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Parent layout starts -->

    <LinearLayout
        style="@style/LinearLayout.Vertical.Full"
        android:padding="10dip" >

        <!-- Title layout begins -->

        <LinearLayout
            style="@style/LinearLayout.Vertical.Wrap"
            android:paddingBottom="10dp" >


            <TextView
                android:id="@+id/dt_lbl_title"
                style="@style/TextView.Label"
                android:text="@string/title_title"
                android:textColor="@color/rose" />

            <TextView
                android:id="@+id/dt_incident_title"
                style="@style/TextView.Label"
               />
        </LinearLayout>
        <!-- Title layout ends. -->


        <!-- Description layout starts -->

        <LinearLayout
            style="@style/LinearLayout.Vertical"
            android:paddingBottom="10dp" >


            <TextView
                android:id="@+id/dt_lbl_incidents_dec"
                style="@style/TextView.Label"
                android:text="@string/description"
                android:textColor="@color/rose" />

            <TextView
                android:id="@+id/dt_incident_desc"
                style="@style/TextView.Description"
                android:minLines="5"
                android:background="@color/white"/>
        </LinearLayout>
        <!-- Description layout ends. -->


        <!-- Categories layout starts -->

        <LinearLayout
            style="@style/LinearLayout.Vertical"
            android:paddingBottom="10dp" >


            <TextView
                android:id="@+id/dt_lbl_date"
                style="@style/TextView.Label"
                android:text="@string/category"
                android:textColor="@color/rose" />


        </LinearLayout>
        <!-- Categories layout ends. -->


        <!-- Date layout starts. -->

        <LinearLayout
            style="@style/LinearLayout.Vertical"
            android:paddingBottom="10dp" >


            <TextView
                android:id="@+id/dt_lbl_date_time"
                style="@style/TextView.Label"
                android:text="@string/date_and_time"
                android:textColor="@color/rose" />

             
        </LinearLayout>
        <!-- Date layout ends. -->


        <!-- Location layout starts. -->

        <LinearLayout
            style="@style/LinearLayout.Vertical"
            android:paddingBottom="10dp" >


            <TextView
                android:id="@+id/incident_loc"
                style="@style/TextView.Label"
                android:text="@string/location"
                android:textColor="@color/rose" />

            <!-- location name -->

            

        </LinearLayout>
        <!-- Location layout ends. -->


        <!-- Photo layout starts. -->

      
        <LinearLayout
            style="@style/LinearLayout.Vertical"
            android:paddingBottom="10dp" >

           <ImageView
		    android:id="@+id/dt_pictosend"
		    android:layout_width="fill_parent"
		    android:layout_height="196dp" />
        </LinearLayout>
        <!-- News layout ends. -->


        <!-- Delete layout starts. -->



    </LinearLayout>
    <!-- Parent layout ends. -->

</ScrollView>