<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/home_actionbar" android:background="@color/home_actionbar_background" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_alignParentTop="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/signed_in_user_area_wrapper" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_toLeftOf="@id/hdr_btn_help" android:layout_alignParentLeft="true">
        <LinearLayout android:orientation="horizontal" android:id="@id/signed_in_user_area" android:background="@drawable/abs__spinner_ab_holo_dark" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <ImageView android:id="@id/signed_in_user_icon" android:layout_width="48.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_user" android:scaleType="center" />
            <TextView android:textAppearance="@style/home_ab_accountinfo_name" android:gravity="center_vertical" android:id="@id/signed_in_user" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/username" android:maxLines="2" />
        </LinearLayout>
    </FrameLayout>
    <ImageButton android:id="@id/hdr_btn_help" android:background="@drawable/ics_home_fragment_button_bg" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_fd" android:layout_toLeftOf="@id/hdr_btn_search" android:contentDescription="@string/feature_discovery_title" />
    <ImageButton android:id="@id/hdr_btn_search" android:background="@drawable/ics_home_fragment_button_bg" android:layout_width="48.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_home_ab_search" android:layout_toLeftOf="@id/home_actionbar_bg_elephant_area" android:layout_centerVertical="true" android:contentDescription="@string/search" />
    <LinearLayout android:id="@id/home_actionbar_bg_elephant_area" android:layout_width="@dimen/hf_standard_peek_area" android:layout_height="fill_parent" android:layout_alignParentRight="true">
        <ImageView android:id="@id/home_actionbar_bg_elephant" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_action_elephant" android:scaleType="center" android:tint="@color/home_embossed_elephant_tint" android:minWidth="@dimen/hf_standard_peek_area" />
    </LinearLayout>
</RelativeLayout>
