<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res/org.taptwo.android.widget.viewflow.example"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<FrameLayout
	    android:id="@id/main_home_lyt"
	    android:layout_width="355dp"
	    android:layout_height="200dp"
	    android:layout_above="@id/status_bar"
	    android:layout_below="@id/test_build"
	    android:layout_marginRight="@dimen/hf_standard_peek_area"
	    android:layout_marginTop="@dimen/home_margin_under_ab" >

    <LinearLayout
        android:id="@id/landscape_layout"
        android:layout_width="444dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@id/landscape_buttons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/home_landscape_buttons_margin_left"
            android:layout_marginRight="@dimen/home_landscape_buttons_margin_right"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@id/top_row_land"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/home_landscape_button_height"
                android:layout_marginBottom="2.0dip"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:id="@id/btn_new_note"
                    android:layout_width="@dimen/home_landscape_button_width"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="@dimen/hf_button_spacing"
                    android:background="@drawable/home_buttons" >

                    <TextView
                        android:id="@id/btn_new_note_txt"
                        style="@style/home_button_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableTop="@drawable/ic_home_add_note"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/new_note" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@id/btn_snapshot"
                    android:layout_width="@dimen/home_landscape_button_width"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/hf_button_spacing"
                    android:background="@drawable/home_buttons" >

                    <TextView
                        android:id="@id/btn_snapshot_txt"
                        style="@style/home_button_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableTop="@drawable/ic_home_snapshot"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/snapshot" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@id/bottom_row_land"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/home_landscape_button_height"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:id="@id/btn_new_audio"
                    android:layout_width="@dimen/home_landscape_button_width"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="@dimen/hf_button_spacing"
                    android:background="@drawable/home_buttons" >

                    <TextView
                        android:id="@id/btn_new_audio_txt"
                        style="@style/home_button_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableTop="@drawable/ic_home_audio"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/cn_audio" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@id/btn_new_attachment"
                    android:layout_width="@dimen/home_landscape_button_width"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/hf_button_spacing"
                    android:background="@drawable/home_buttons" >

                    <TextView
                        android:id="@id/btn_new_attachment_txt"
                        style="@style/home_button_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableTop="@drawable/ic_home_attachment"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/attach" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
<FrameLayout android:id="@id/right_overlay" android:layout_width="@dimen/hf_standard_peek_area" android:layout_height="fill_parent" android:layout_alignParentRight="true">
        <View android:id="@id/right_overlay_shadow" android:background="@drawable/bg_inset_shadow_right" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </FrameLayout>
    <LinearLayout android:id="@id/fd_transparent_bg" android:background="#00000000" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    <RelativeLayout android:id="@id/fd_layout" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="33.0dip" android:layout_below="@id/home_header_bar" android:layout_alignParentBottom="true">
        <LinearLayout android:orientation="vertical" android:id="@id/fd_fragment_layout" android:background="@drawable/feature_discovery_popover" android:paddingLeft="14.0dip" android:paddingRight="13.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignTop="@id/fd_pip" android:layout_alignParentBottom="true" />
        <ImageView android:id="@id/fd_pip" android:layout_width="45.0dip" android:layout_height="wrap_content" android:layout_marginRight="84.0dip" android:src="@drawable/feature_discovery_popover_tip" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/overlay" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <View android:id="@id/bottom_saver" android:layout_width="fill_parent" android:layout_height="28.0dip" android:layout_alignParentBottom="true" />
        <RelativeLayout android:id="@id/overlay_bubble" android:background="@drawable/help_bubble_bg_down_right" android:padding="10.0dip" android:paddingTop="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_above="@id/bottom_saver">
            <ImageView android:id="@id/overlay_bubble_arrow" android:layout_width="20.0dip" android:layout_height="40.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="-4.0dip" android:src="@drawable/ic_right_arrow" android:scaleType="centerInside" android:layout_above="@id/bottom_saver" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            <TextView android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/overlay_bubble_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:layout_toLeftOf="@id/overlay_bubble_arrow" android:layout_alignParentTop="true" android:layout_alignWithParentIfMissing="true" />
            <TextView android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/overlay_bubble_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:layout_toLeftOf="@id/overlay_bubble_arrow" android:layout_below="@id/overlay_bubble_title" android:layout_alignWithParentIfMissing="true" />
            <View android:id="@id/bottom_saver" android:layout_width="fill_parent" android:layout_height="14.0dip" android:layout_below="@id/overlay_bubble_message" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>